samples/_failures_safe/1761138389_067d0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6ca9244.c: In function ‘initialize_parser’:
./samples/SAFE/__tmp_f6ca9244.c:150:5: error: expected expression at end of input
  150 |     if (parser == NULL || tokens == NULL) return
      |     ^~
./samples/SAFE/__tmp_f6ca9244.c:150:5: error: expected declaration or statement at end of input
